# libimagequant

./: CMakeLists.txt  README.md
cmake/: java.cmake
